--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,9 @@
 {erl_opts, [warnings_as_errors, debug_info]}.
 
-{port_env,
- [{"darwin", "DRV_CFLAGS",  "$DRV_CFLAGS -fno-common"},
-  {"darwin", "DRV_LDFLAGS", "$DRV_LDFLAGS -liconv"}]}.
+{pre_hooks,
+  [{"(linux|darwin|solaris)", compile, "make -C c_src"},
+   {"(freebsd)", compile, "gmake -C c_src"}]}.
+{post_hooks,
+  [{"(linux|darwin|solaris)", clean, "make -C c_src clean"},
+   {"(freebsd)", clean, "gmake -C c_src clean"}]}.
 
-{port_specs, [{"priv/iconverl.so", ["c_src/iconverl.c"]}]}.
